@@ -36,34 +36,18 @@ END
 }
 
 require phonebook
-require lock
-require util
 
-## format of phone book: ${PRE}${NUMBER}${SEP}${NAME}
-PRE="$CALLMONITOR_PREFIX"
-PRE_RE="$CALLMONITOR_PREFIX_RE"
-SEP="$CALLMONITOR_SEPARATOR"
-SEP_RE="$CALLMONITOR_SEPARATOR_RE"
-
-REVERSE=false CACHE=true PERSISTENT=false DEBUG=false
-case "$CALLMONITOR_REVERSE" in
-    yes) REVERSE=true ;;
-    no)  REVERSE=false ;;
-esac
-case "$CALLMONITOR_REVERSE_CACHE" in
-    no)  CACHE=false PERSISTENT=false ;;
-    transient)	CACHE=true PERSISTENT=false ;;
-    persistent) CACHE=true PERSISTENT=true ;;
-esac
+## format of phone book: ${CALLMONITOR_PREFIX}${NUMBER}${CALLMONITOR_SEPARATOR}${NAME}
 
 ## parse options
+_pb_DEBUG=false
 TEMP="$(getopt -o '' -l debug,local,help -n "${0##*/}" -- "$@")" || exit 1
 eval "set -- $TEMP"
 
 while true; do
     case $1 in
-	--local) REVERSE=false ;;
-	--debug) DEBUG=true ;;
+	--local) _pb_REVERSE=false ;;
+	--debug) _pb_DEBUG=true ;;
 	--help) _usage >&2; exit 1 ;;
 	--) shift; break ;;
 	*) ;; # should never happen
@@ -71,132 +55,11 @@ while true; do
     shift
 done
 
-## where to put new number-name pairs
-if $PERSISTENT; then
-    PHONEBOOK="$CALLMONITOR_PERSISTENT"
-else
-    PHONEBOOK="$CALLMONITOR_TRANSIENT"
-fi
-
 ## set up logging
-if $DEBUG; then
+if $_pb_DEBUG; then
     __debug() { echo "phonebook: $*" >&2; }
     __debug "entering DEBUG mode"
-else
-    __debug() { true; }
 fi
-
-_get() {
-    local NUMBER="$1" NUMBER_NORM NAME exitval
-    _get_local "$NUMBER"
-    exitval=$?
-    if ? "exitval != 0"; then
-	NUMBER_NORM="$(normalize_address "$NUMBER")"
-	case $NUMBER_NORM in "$NUMBER") ;; *)
-	    _get_local "$NUMBER_NORM"
-	    exitval=$?
-	;; esac
-	if ? "exitval != 0" && $REVERSE; then
-	    NAME="$(reverse_lookup "$NUMBER_NORM")"
-	    if ? $? == 0 && $CACHE; then
-		_put_local "$NUMBER_NORM" "$NAME" >&2 &
-		exitval=0
-	    fi
-	fi
-    fi
-    echo "$NAME"
-    return $exitval
-}
-
-## for performance, _get_local returns its result in $NAME
-_get_local() {
-    local NUMBER="$1" NUMBER_RE
-    NUMBER_RE="$(echo "$NUMBER" | sed_re_escape)"
-    NAME="$(sed -ne "/^${PRE_RE}${NUMBER_RE}${SEP_RE}/{
-	s/^${PRE_RE}${NUMBER}${SEP_RE}/:/p;q}" \
-	"$CALLMONITOR_TRANSIENT" "$CALLMONITOR_PERSISTENT" 2> /dev/null)"
-    if ! empty "$NAME"; then
-	NAME="${NAME#:}"
-	__debug "phone book contains {$NUMBER -> $NAME}"
-	return 0
-    fi
-    return 1
-}
-
-_remove() {
-    MODE=remove _put_or_remove "$@"
-}
-_put_local() {
-    MODE=put _put_or_remove "$@"
-}
-_put_or_remove() {
-    local NUMBER="$1" NAME="$2" NUMBER_RE
-    NUMBER_RE="$(echo "$NUMBER" | sed_re_escape)"
-    case $MODE in 
-	remove)
-	    __debug "removing $NUMBER from phone book $PHONEBOOK" ;;
-	*)
-	    NAME="$(_norm_value "$NAME")"
-	    __debug "putting {$NUMBER -> $NAME} into phone book $PHONEBOOK"
-	;;
-    esac
-
-    ## beware of concurrent updates
-    if lock "$PHONEBOOK"; then
-	local TMPFILE="$CALLMONITOR_TMPDIR/.callmonitor.tmp"
-	{ 
-	    sed -e "/^${PRE_RE}${NUMBER_RE}${SEP_RE}/d" "$PHONEBOOK" 2> /dev/null
-	    case $MODE in put)
-		echo "${PRE}${NUMBER}${SEP}${NAME}" ;;
-	    esac
-	} > "$TMPFILE"
-	cat "$TMPFILE" > "$PHONEBOOK"
-	rm "$TMPFILE"
-	unlock "$PHONEBOOK"
-    else
-	__debug "locking $PHONEBOOK failed"
-    fi
-    if $PERSISTENT; then
-	callmonitor_store
-    fi
-}
-## a value must always be a single line (we normalize whitespace as we go)
-_norm_value() {
-    echo $(echo "$@" | sed -e '$!s/$/;/')
-}
-
-_init() {
-    RUN="/var/run/phonebook"
-    mkdir -p "$RUN"
-    "$CALLMONITOR_LIBDIR/sipnames" > "$RUN"/sip
-}
-
-_tidy() {
-    local exitval=1
-    local book="$CALLMONITOR_PERSISTENT"
-    echo -n "Tidying up $book: " >&2
-    if lock "$book"; then
-	echo -n "sorting and cleansing, " >&2
-	local TMPFILE="$CALLMONITOR_TMPDIR/.callmonitor.tmp"
-	sort -u "$book" | 
-	sed -e '
-	    /^[[:space:]]*$/d
-	    s/^[[:space:]]*//
-	    s/[[:space:]]\+/	/
-	' > "$TMPFILE" && cat "$TMPFILE" > "$book"
-	exitval=$?
-	rm "$TMPFILE"
-	unlock "$book"
-    fi
-    if ? exitval == 0 && $PERSISTENT; then
-	callmonitor_store
-    fi
-    if ? exitval == 0; then
-	echo "done." >&2
-    else
-	echo "failed." >&2
-    fi
-}
 
 ## check syntax:
 ## number of arguments (to phonebook) expected
@@ -212,13 +75,5 @@ if ? "$# != expect"; then
     exit 1
 fi
 
-case $1 in
-    get) _get "$2" ;;
-    exists) _get "$2" > /dev/null ;;
-    remove) _remove "$2" ;;
-    put) _put_local "$2" "$3" ;;
-    init) _init ;;
-    tidy) _tidy ;;
-    *) _usage >&2; exit 1 ;;
-esac
+_pb_main -- "$@"
 exit $?
